--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,6 +47,8 @@ button {
   white-space: nowrap;
   direction: ltr;
 
+  cursor: pointer;
+
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
   /* Support for Safari and Chrome. */
